--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -158,7 +158,7 @@ services:
     depends_on:
       - kafka
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: kafka:9092
+      CONNECT_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       CONNECT_REST_ADVERTISED_HOST_NAME: connect
       CONNECT_REST_PORT: 8083
       CONNECT_GROUP_ID: compose-connect-group
@@ -193,7 +193,7 @@ services:
     environment:
       DYNAMIC_CONFIG_ENABLED: 'true'
       KAFKA_CLUSTERS_0_NAME: 'OpenStream-Cluster'
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       AUTH_TYPE: 'LOGIN_FORM'
       SPRING_SECURITY_USER_NAME: ${KAFKA_UI_USER}
       SPRING_SECURITY_USER_PASSWORD: ${KAFKA_UI_PASS}
@@ -400,8 +400,8 @@ services:
     volumes:
       - ./data/clickhouse:/var/lib/clickhouse
     ports:
-      - "8123:8123"
-      - "9004:9000"
+      - "8001:8123"
+      - "8002:9000"
     networks:
       - octane-net
     ulimits:
@@ -468,6 +468,130 @@ services:
       - redis
     networks:
       - octane-net
+  
+  intelligence-svc:
+    build: 
+      context: ./services/intelligence
+      dockerfile: Dockerfile
+    container_name: intelligence-svc
+    environment:
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - ACTIVE_PROVIDER=${ACTIVE_PROVIDER}
+      - AI_MODELS=${AI_MODELS}
+      - DEFAULT_EMBEDDING_MODEL=${DEFAULT_EMBEDDING_MODEL}
+      - DEFAULT_OPENAI_EMBEDDING_MODEL=${DEFAULT_OPENAI_EMBEDDING_MODEL}
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
+      - SERVICE_API_KEY=${SERVICE_API_KEY}
+    networks:
+      - octane-net
+    depends_on:
+      - redis
+  
+  ingestion-svc:
+    build: 
+      context: ./services/ingestion
+      dockerfile: Dockerfile
+    container_name: ingestion-svc
+    ports:
+      - "8084:8000"
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - KAFKA_SASL_USER=${KAFKA_BROKER_USER}
+      - KAFKA_SASL_PASS=${KAFKA_BROKER_PASS}
+      - KAFKA_TOPIC=${INGESTION_KAFKA_TOPIC}
+      - ES_HOST=${ES_HOST}
+      - ELASTIC_USER=${ELASTIC_USER}
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - EMBEDDING_DIMS=${EMBEDDING_DIMS}
+      - ES_INDEX_NAME=${ES_INDEX_NAME}
+      - INTELLIGENCE_SVC_URL=http://intelligence-svc:8000
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
+      - SERVICE_API_KEY=${SERVICE_API_KEY}
+      - POSTGRES_DSN=${POSTGRES_DSN}
+      - SUMMARY_MODEL=${SUMMARY_MODEL}
+      - EMBEDDING_MODEL=${EMBEDDING_MODEL}
+    depends_on:
+      - kafka
+      - elasticsearch
+      - intelligence-svc
+      - redis
+    networks:
+      - octane-net
+    # extra_hosts:
+    #  - "broker.octanebrew.dev:129.154.43.166"
+    #  - "elastic.octanebrew.dev:172.67.169.35"
+
+  ingestion-worker:
+    build: 
+      context: ./services/ingestion
+      dockerfile: Dockerfile
+    container_name: ingestion-worker
+    command: ["uv", "run", "python", "-m", "ingestion.consumer"]
+    environment:
+      - PYTHONUNBUFFERED=1
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - KAFKA_SASL_USER=${KAFKA_BROKER_USER}
+      - KAFKA_SASL_PASS=${KAFKA_BROKER_PASS}
+      - KAFKA_TOPIC=${INGESTION_KAFKA_TOPIC}
+      - ES_HOST=${ES_HOST}
+      - ELASTIC_USER=${ELASTIC_USER}
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - EMBEDDING_DIMS=${EMBEDDING_DIMS}
+      - ES_INDEX_NAME=${ES_INDEX_NAME}
+      - INTELLIGENCE_SVC_URL=${INTELLIGENCE_SVC_URL}
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
+      - SERVICE_API_KEY=${SERVICE_API_KEY}
+      - POSTGRES_DSN=${POSTGRES_DSN}
+      - SUMMARY_MODEL=${SUMMARY_MODEL}
+      - EMBEDDING_MODEL=${EMBEDDING_MODEL}
+    depends_on:
+      - kafka
+      - elasticsearch
+      - intelligence-svc
+      - redis
+    networks:
+      - octane-net
+    # extra_hosts:
+    #  - "broker.octanebrew.dev:129.154.43.166"
+    #  - "elastic.octanebrew.dev:172.67.169.35"
+    healthcheck:
+      test: ["CMD", "find", "/tmp/healthy", "-mmin", "-1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+  ai-oplog-worker:
+    build: 
+      context: ./services/ingestion
+      dockerfile: Dockerfile
+    container_name: ai-oplog-worker
+    command: ["uv", "run", "python", "-m", "ingestion.worker"]
+    environment:
+      - PYTHONUNBUFFERED=1
+      - ES_HOST=${ES_HOST}
+      - ELASTIC_USER=${ELASTIC_USER}
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - EMBEDDING_DIMS=${EMBEDDING_DIMS}
+      - ES_INDEX_NAME=${ES_INDEX_NAME}
+      - INTELLIGENCE_SVC_URL=${INTELLIGENCE_SVC_URL}
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
+      - SERVICE_API_KEY=${SERVICE_API_KEY}
+      - POSTGRES_DSN=${POSTGRES_DSN}
+      - SUMMARY_MODEL=${SUMMARY_MODEL}
+      - EMBEDDING_MODEL=${EMBEDDING_MODEL}
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - KAFKA_SASL_USER=${KAFKA_BROKER_USER}
+      - KAFKA_SASL_PASS=${KAFKA_BROKER_PASS}
+    depends_on:
+      - intelligence-svc
+      - redis
+      - postgres
+    networks:
+      - octane-net
+    # extra_hosts:
+    #  - "elastic.octanebrew.dev:172.67.169.35"
+
 
 
 networks:
