feat: Revamped semantic search, included NER, reranker, query analysis and other capabilities

--- a/services/dictionary-service/Dockerfile
+++ b/services/dictionary-service/Dockerfile
@@ -1,33 +1,39 @@
 FROM python:3.12-slim
 
-ENV UV_PYTHON_PREFERENCE=system
-ENV UV_PYTHON=python3.12
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 
+# Set workdir
 WORKDIR /app
+
+# Enable bytecode compilation and set link mode to copy
+ENV UV_COMPILE_BYTECODE=1
+ENV UV_LINK_MODE=copy
+ENV PYTHONUNBUFFERED=1
 
 # Install system dependencies (Java for LanguageTool)
 RUN apt-get update && apt-get install -y \
     default-jre \
     && rm -rf /var/lib/apt/lists/*
 
-# Install uv
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
-
 # Copy only dependency files
 COPY pyproject.toml ./
 
-# Install all dependencies 
-RUN uv sync --no-install-project
+# Install dependencies
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --no-install-project
 
 # Download additional NLP resources (LanguageTool & TextBlob)
-RUN uv run --no-project python -m textblob.download_corpora \
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv run --no-project python -m textblob.download_corpora \
     && uv run --no-project python -c "import language_tool_python; language_tool_python.LanguageTool('en-US')"
 
-# Copy the rest of the source code
-COPY . .
+# Copy the rest of the application
+COPY README.md ./
+COPY src ./src
 
-# 5. Final sync to link the project
-RUN uv sync
+# Install the project
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync
 
-# Run app
+# Run the application
 CMD ["uv", "run", "uvicorn", "dictionary_service.main:app", "--host", "0.0.0.0", "--port", "8000"]
