--- a/services/intelligence/pyproject.toml
+++ b/services/intelligence/pyproject.toml
@@ -13,12 +13,12 @@ dependencies = [
     "openai>=2.16.0",
     "pydantic-settings>=2.12.0",
     "uvicorn>=0.40.0",
-    "fastapi-limiter>=0.1.6",
     "redis>=5.0.1",
     "prometheus-fastapi-instrumentator>=7.0.0",
     "opentelemetry-api>=1.22.0",
     "opentelemetry-sdk>=1.22.0",
     "opentelemetry-instrumentation-fastapi>=0.43b0",
+    "flashrank>=0.2.0",
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
     "pytest-mock>=3.12.0",
