--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -21,6 +21,16 @@ http {
 	# Docker DNS Resolver
 	resolver 127.0.0.11 valid=30s;
 
+	# HTTP/2 Buffer Optimizations
+	http2_max_field_size 128k;
+	http2_max_header_size 128k;
+	http2_push_preload on;
+
+	# Proxy Buffer Settings
+	proxy_buffer_size 128k;
+	proxy_buffers 4 256k;
+	proxy_busy_buffers_size 256k;
+
 	# =====================================================
 	# Cloudflare IP detection
 	# =====================================================
@@ -275,6 +285,7 @@ http {
 	server {
 
 		listen 443 ssl;
+		http2 on;
 		server_name openstream.octanebrew.dev;
 
 		if ($is_cloudflare = 0) {
