fix(ops): Updated cloudflare ipv6 ip and nginx config

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -21,12 +21,14 @@ http {
 	# Docker DNS Resolver
 	resolver 127.0.0.11 valid=30s;
 
-	# HTTP/2 Buffer Optimizations
-	http2_max_field_size 128k;
-	http2_max_header_size 128k;
-	http2_push_preload on;
+	# Global Performance Settings
+	tcp_nodelay on;
+	tcp_nopush on;
+	server_tokens off;
 
-	# Proxy Buffer Settings
+	# Header & Buffer Optimizations
+	client_header_buffer_size 8k;
+	large_client_header_buffers 4 128k;
 	proxy_buffer_size 128k;
 	proxy_buffers 4 256k;
 	proxy_busy_buffers_size 256k;
@@ -54,6 +56,15 @@ http {
 		104.24.0.0/14 1;
 		172.64.0.0/13 1;
 		131.0.72.0/22 1;
+
+		# Cloudflare IPv6 ranges
+		2400:cb00::/32 1;
+		2606:4700::/32 1;
+		2803:f800::/32 1;
+		2405:b500::/32 1;
+		2405:8100::/32 1;
+		2a06:98c0::/29 1;
+		2c0f:f248::/32 1;
 	}
 
 	# --- HTTP REDIRECT ---
@@ -78,17 +89,14 @@ http {
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_session_cache shared:SSL:10m;
 
-	# --- 1. MAIN SITE (Video Player) ---
+	# --- 1. MAIN SITE --
 	server {
 
 		listen 443 ssl;
 		http2 on;
 		server_name octanebrew.dev www.octanebrew.dev;
 
-		if ($is_cloudflare = 0) {
-
-			return 444;
-		}
+		# if ($is_cloudflare = 0) { return 444; }
 
 		location / {
 
