feat: Added link preview meta and updated responsiveness of landing page

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -96,12 +96,24 @@ http {
 		http2 on;
 		server_name octanebrew.dev www.octanebrew.dev;
 
-		# if ($is_cloudflare = 0) { return 444; }
+		if ($is_cloudflare = 0) {
+
+			return 444;
+		}
+
+		root /var/www/html;
+		index index.html;
 
 		location / {
+			try_files $uri $uri/ =404;
+		}
 
-			root /var/www/html;
-			index index.html;
+		# Static Assets (CSS, JS, Fonts)
+		location ~* \.(css|js|webp|png|jpg|jpeg|gif|ico|woff2|woff|ttf|svg)$ {
+			expires 1y;
+			add_header Cache-Control "public, no-transform";
+			add_header X-Content-Type-Options nosniff;
+			try_files $uri =404;
 		}
 
 		location /video/ {
