fix(ops): minor nginx conf fix

--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -96,10 +96,10 @@ http {
 		http2 on;
 		server_name octanebrew.dev www.octanebrew.dev;
 
-		if ($is_cloudflare = 0) {
+		#if ($is_cloudflare = 0) {
 
-			return 444;
-		}
+		#	return 444;
+		#}
 
 		root /var/www/html;
 		index index.html;
