feat: Implement adaptive VOD transcoding with fast and slow lanes, incorporating video complexity analysis and new FFmpeg utilities.

--- a/services/rtmp.conf
+++ b/services/rtmp.conf
@@ -25,6 +25,9 @@ rtmp {
             on_publish http://openstream-api:4000/api/streams/on_publish;
             # on_publish http://host.openstream.internal:9901/api/streams/on_publish; # LOCAL DEV
 
+            # DISCONNECT HOOK: Clears live status immediately
+            on_publish_done http://openstream-api:4000/api/streams/on_publish_done;
+
             # PROCESSING HOOK: Nginx sends filename when recording stops.
             on_record_done http://openstream-api:4000/api/streams/on_record_done;
             # on_record_done http://host.openstream.internal:9901/api/streams/on_record_done; # LOCAL DEV
