--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,7 @@ services:
       - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
       - KAFKA_SASL_USER=${KAFKA_BROKER_USER}
       - KAFKA_SASL_PASS=${KAFKA_BROKER_PASS}
-      - STORAGE_SERVICE_URL=host.docker.internal:50051
+      - STORAGE_SERVICE_URL=storage-service:50051
     networks:
       - octane-net
     depends_on:
