feat: Moved Kafka FFMPEG worker consumer and producer group to env variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,8 @@ services:
       - KAFKA_SASL_USER=${KAFKA_BROKER_USER}
       - KAFKA_SASL_PASS=${KAFKA_BROKER_PASS}
       - STORAGE_SERVICE_URL=storage-service:50051
+      - KAFKA_FFMPEG_CONSUMER_GROUP_ID=${KAFKA_FFMPEG_CONSUMER_GROUP_ID}
+      - KAFKA_FFMPEG_PRODUCER_GROUP_ID=${KAFKA_FFMPEG_PRODUCER_GROUP_ID}
     networks:
       - octane-net
     depends_on:
