--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,27 @@
+# Shared FFmpeg worker base — used by ffmpeg-worker-fast and ffmpeg-worker-slow via YAML anchors.
+x-ffmpeg-base: &ffmpeg-base
+  build:
+    context: ./services/ffmpeg-worker
+    dockerfile: Dockerfile
+  volumes:
+    - /mnt/data/minio/data:/minio_data:rw
+  networks:
+    - octane-net
+  depends_on:
+    - kafka
+  environment: &ffmpeg-env
+    KAFKA_BROKERS: ${KAFKA_BOOTSTRAP_SERVERS}
+    FFMPEG_PATH: /usr/bin/ffmpeg
+    OPENSTREAM_VOL_PATH: /minio_data
+    MINIO_ENDPOINT: ${MINIO_ENDPOINT}
+    MINIO_PORT: ${MINIO_PORT}
+    MINIO_ACCESS_KEY: ${MINIO_ROOT_USER}
+    MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD}
+    KAFKA_SASL_USER: ${KAFKA_BROKER_USER}
+    KAFKA_SASL_PASS: ${KAFKA_BROKER_PASS}
+    STORAGE_SERVICE_URL: storage-service:50051
+    HLS_SEGMENT_TIME: "4"
+
 services:
   # --- NGINX GATEWAY & SSL ---
   nginx-gateway:
@@ -64,30 +88,7 @@ services:
           cpus: '2.0'
           memory: 4G
 
-  # --- FFMPEG WORKER (shared base via YAML anchor) ---
-  x-ffmpeg-base: &ffmpeg-base
-    build:
-      context: ./services/ffmpeg-worker
-      dockerfile: Dockerfile
-    volumes:
-      - /mnt/data/minio/data:/minio_data:rw
-    networks:
-      - octane-net
-    depends_on:
-      - kafka
-    environment: &ffmpeg-env
-      KAFKA_BROKERS: ${KAFKA_BOOTSTRAP_SERVERS}
-      FFMPEG_PATH: /usr/bin/ffmpeg
-      OPENSTREAM_VOL_PATH: /minio_data
-      MINIO_ENDPOINT: ${MINIO_ENDPOINT}
-      MINIO_PORT: ${MINIO_PORT}
-      MINIO_ACCESS_KEY: ${MINIO_ROOT_USER}
-      MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD}
-      KAFKA_SASL_USER: ${KAFKA_BROKER_USER}
-      KAFKA_SASL_PASS: ${KAFKA_BROKER_PASS}
-      STORAGE_SERVICE_URL: storage-service:50051
-      HLS_SEGMENT_TIME: "4"
-
+  # --- FFMPEG WORKERS ---
   ffmpeg-worker-fast:
     <<: *ffmpeg-base
     container_name: ffmpeg-worker-fast
