--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -405,8 +405,17 @@ services:
   clickhouse:
     image: clickhouse/clickhouse-server
     container_name: clickhouse
+    environment:
+      - CLICKHOUSE_USER=${CLICKHOUSE_USER}
+      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD}
+      - CLICKHOUSE_DB=${CLICKHOUSE_DB}
     volumes:
       - /mnt/data/clickhouse:/var/lib/clickhouse
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     ports:
       - "8001:8123"
       - "8002:9000"
@@ -476,6 +485,37 @@ services:
       - redis
     networks:
       - octane-net
+
+  analytics-svc:
+    build:
+      context: ./services/analytics
+      dockerfile: Dockerfile
+    container_name: analytics-svc
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - KAFKA_TOPIC=octane.events
+      - KAFKA_SASL_USER=${KAFKA_BROKER_USER}
+      - KAFKA_SASL_PASS=${KAFKA_BROKER_PASS}
+      - CLICKHOUSE_HOST=clickhouse
+      - CLICKHOUSE_PORT=8123
+      - CLICKHOUSE_USER=${CLICKHOUSE_USER}
+      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD}
+      - CLICKHOUSE_DB=${CLICKHOUSE_DB}
+    depends_on:
+      - kafka
+      - clickhouse
+    #ports:
+    #  - "8321:8001"
+    networks:
+      - octane-net
+    #extra_hosts:
+    #  - "broker.octanebrew.dev:129.154.43.166"
+    #  - "elastic.octanebrew.dev:172.67.169.35"
+    healthcheck:
+      test: ["CMD", "find", "/tmp/healthy", "-mmin", "-1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
   
   intelligence-svc:
     build: 
@@ -721,7 +761,6 @@ services:
         limits:
           cpus: '1.0'
           memory: 6G
-
 
 
 networks:
