feat(catalyst): add product intelligence spoke with multiple product catalog and decoupled workers

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,10 @@ POSTGRES_DATA_DIR=/mnt/data/postgres/data
 # --- DOZZLE ---
 DOZZLE_USERNAME=user
 DOZZLE_PASSWORD=password
+
+# --- CATALYST SPOKE ---
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+KAGGLE_USERNAME=
+KAGGLE_KEY=
+
